<resources>
    <string name="app_name" translatable="false">Nextcloud Deck</string>
    <string name="app_name_short" translatable="false">Deck</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_search_deck">Search deck</string>
    <string name="simple_add">Add</string>
    <string name="simple_save">Save</string>
    <string name="simple_more">More</string>
    <string name="simple_title">Title</string>
    <string name="simple_copy">Copy</string>
    <string name="simple_synchronization">Synchronization</string>
    <string name="simple_appearance">Appearance</string>
    <string name="simple_error">Error</string>
    <string name="simple_exception">Exception</string>
    <string name="simple_close">Close</string>
    <string name="simple_filter">Filter</string>
    <string name="simple_reset">Reset</string>
    <string name="simple_discard">Discard</string>
    <string name="simple_update">Update</string>
    <string name="simple_export">Export</string>
    <string name="simple_delete">Delete</string>
    <string name="simple_rename">Rename</string>
    <string name="simple_settings">Settings</string>
    <string name="simple_undo">Undo</string>
    <string name="simple_manage">manage</string>
    <string name="simple_share">share</string>
    <string name="simple_select">Select</string>
    <string name="simple_comment">Comment</string>
    <string name="simple_disabled">disabled</string>
    <string name="simple_archive">Archive</string>
    <string name="simple_unassigned">Unassigned</string>
    <string name="hint_error_appeared">An error appeared</string>
    <string name="edit_board">Edit board</string>
    <string name="archive_board">Archive board</string>
    <string name="delete_board">Delete board</string>
    <string name="delete_something">Delete %1$s</string>
    <string name="about">About</string>
    <string name="about_version_title">Version</string>
    <string name="about_version">You are currently using %1$s</string>
    <string name="about_maintainer_title">Maintainer</string>
    <string name="about_maintainer" translatable="false">Niedermann IT-Dienstleistungen</string>
    <string name="about_developers_title">Developers</string>
    <string name="about_developers" translatable="false">Stefan Niedermann, Artur Dawtjan</string>
    <string name="about_translators_title">Translators</string>
    <string name="about_translators_transifex">Nextcloud community on %1$s</string>
    <string name="about_translators_transifex_label">Transifex</string>
    <string name="about_source_title">Source code</string>
    <string name="about_source">This project is hosted on GitHub: %1$s</string>
    <string name="about_issues_title">Issues</string>
    <string name="about_issues">You can report bugs, enhancement proposals and feature requests at the GitHub issue tracker: %1$s</string>
    <string name="about_translate_title">Translate</string>
    <string name="about_translate">Join the Nextcloud team on Transifex and help us to translate this app: %1$s</string>
    <string name="about_app_license_title">App license</string>
    <string name="about_app_license">This application is licensed under the GNU GENERAL PUBLIC LICENSE v3+.</string>
    <string name="about_app_license_button">View license</string>
    <string name="about_app_icon_author_link_label" translatable="false">GitHub</string>
    <string name="about_icons_disclaimer_title">Icons</string>
    <string name="about_icons_disclaimer_app_icon">For the original icon see %1$s.</string>
    <string name="about_icons_disclaimer_mdi_icons">All further icons used by this app are %1$s made by Google Inc. and licensed under the Apache 2.0 License.</string>
    <string name="about_icons_disclaimer_mdi">Material Design Icons</string>
    <string name="about_credits_tab_title">Credits</string>
    <string name="about_contribution_tab_title">Contribution</string>
    <string name="about_license_tab_title">License</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="edit">Edit</string>
    <string name="label_labels">Select Tags</string>
    <string name="label_description">Description</string>
    <string name="hint_assign_people">Assign users</string>
    <string name="hint_due_date_date">Due date</string>
    <string name="hint_due_date_time">Time</string>
    <string name="hint_start_date_date">Start date</string>
    <string name="hint_start_date_time">Time</string>
    <string name="card_not_found">Card not found</string>
    <string name="card_not_found_message">The card could not be found. Maybe it has been deleted recently.</string>
    <string name="add_account">Add account</string>
    <string name="choose_account">Choose account</string>
    <string name="add_card">Add card</string>
    <string name="activity">Activity</string>
    <string name="add_list">Add list</string>
    <string name="rename_list">Rename list</string>
    <string name="delete_list">Delete list</string>
    <string name="counter_max_value" translatable="false">+99</string>
    <string name="label_menu">menu</string>
    <string name="action_card_assign">Assign card to me</string>
    <string name="action_card_unassign">Unassign card from me</string>
    <string name="action_card_archive">Archive card</string>
    <string name="action_card_delete">Delete card</string>
    <string name="add_board">Add board</string>
    <string name="label_clear_due_date">Clear due date</string>
    <string name="label_clear_start_date">Clear start date</string>
    <string name="label_clear_done">Not done</string>
    <string name="label_due_at">Due at: %1$s</string>
    <string name="label_start_at">Start at: %1$s</string>
    <string name="label_add">Add %1$s</string>
    <string name="url_maintainer" translatable="false">https://www.niedermann.it/</string>
    <string name="url_about_icon_author" translatable="false">https://github.com/nextcloud/deck/commit/8c04ea8dc99e9b392f4039e8e5e6964d5a6d3453#diff-f3716cc279904617b1a21078526b6bf1R1</string>
    <string name="url_source" translatable="false">https://github.com/stefan-niedermann/nextcloud-deck</string>
    <string name="url_issues" translatable="false">https://github.com/stefan-niedermann/nextcloud-deck/issues/new/choose</string>
    <string name="url_report_bug" translatable="false">https://github.com/stefan-niedermann/nextcloud-deck/issues/new?labels=bug&amp;template=bug_report.md</string>
    <string name="url_license" translatable="false">https://github.com/stefan-niedermann/nextcloud-deck/blob/master/LICENSE</string>
    <string name="url_translations" translatable="false">https://app.transifex.com/nextcloud/nextcloud/</string>
    <string name="url_about_icons_disclaimer_mdi" translatable="false">https://materialdesignicons.com/</string>
    <string name="url_fragment_update_deck" translatable="false">/index.php/settings/apps/installed/deck</string>
    <string name="url_fragment_install_deck" translatable="false">/index.php/settings/apps/organization/deck</string>
    <string name="url_fragment_server_logs" translatable="false">/index.php/settings/admin/logging</string>
    <string name="url_fragment_share_card_pre_1_0_0" translatable="false">/index.php/apps/deck/#!/board/%1$d/card/%2$d</string>
    <string name="url_fragment_share_card_since_1_0_0" translatable="false">/index.php/apps/deck/#/board/%1$d/card/%2$d</string>
    <string name="url_fragment_share_card_since_1_12_0" translatable="false">/index.php/apps/deck/board/%1$d/card/%2$d</string>
    <string name="url_fragment_share_board_pre_1_0_0" translatable="false">/index.php/apps/deck/#!/board/%1$d</string>
    <string name="url_fragment_share_board_since_1_0_0" translatable="false">/index.php/apps/deck/#/board/%1$d</string>
    <string name="url_fragment_share_board_since_1_12_0" translatable="false">/index.php/apps/deck/board/%1$d</string>
    <string name="url_faq_push_notifications" translatable="false">https://github.com/stefan-niedermann/nextcloud-deck/blob/master/FAQ.md#how-to-receive-notifications-when-a-due-date-is-reached</string>
    <string name="card_edit_details">Details</string>
    <string name="card_edit_attachments">Attachments</string>
    <string name="card_edit_activity">Activity</string>
    <string name="about_server_app_version_text">Server app version:</string>
    <string name="no_files_attached_to_this_card">There are no files attached to this card.</string>
    <string name="attachments">Attachments</string>
    <string name="append_to_description">Append to description</string>
    <string name="no_cards">No cards yet</string>
    <string name="account_already_added">The account %1$s has already been added</string>
    <string name="not_synced_yet">Not synced yet</string>
    <string name="no_lists_yet">No lists yet</string>
    <string name="do_you_want_to_save_your_changes">Do you want to save your changes?</string>
    <string name="do_you_want_to_archive_all_cards_of_the_list">Do you want to archive all cards of %1$s?</string>
    <string name="do_you_want_to_archive_all_cards_of_the_filtered_list">Do you want to archive all filtered cards of %1$s?</string>
    <plurals name="do_you_want_to_delete_the_current_list">
        <item quantity="one">This will permanently delete %1$d card of this list.</item>
        <item quantity="other">This will permanently delete all %1$d cards of this list.</item>
    </plurals>
    <string name="last_background_sync">Last background sync:</string>
    <string name="action_card_move">Move card</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="updating_card">Updating card…</string>
    <string name="move_list_right">Move list right</string>
    <string name="move_list_left">Move list left</string>
    <string name="manage_tags">Manage tags</string>
    <string name="share_link">Share link</string>
    <string name="archive_cards">Archive cards</string>
    <string name="clone_board">Clone board</string>
    <string name="widget_placeholder_icon">Widget placeholder icon</string>
    <string name="widget_upcoming_title">Upcoming cards</string>
    <string name="show_error">Show error</string>
    <string name="push_notification_link_empty">Due to a known issue in the Deck web app we are unfortunately not able to display this card. For more information see: %1$s</string>
    <string name="settings_recovery_title">Emergency Recovery</string>
    <string name="recovery_deck_server_title">Recover Deck Server</string>
    <string name="recovery_deck_android_title">Recover Deck Android</string>
    <string name="settings_restore_server_summary">⚠️ DANGER: Overwrites server data with locally available data. Locally available data is only a part of the available information and is missing attachments, activities, and more. Requires re-authentication and app restart.</string>
    <string name="simple_restore">Restore</string>
    <string name="settings_create_local_backup">Create snapshot</string>
    <string name="settings_create_local_backup_summary">Creates a snapshot of the local database. This is not a backup, and it is lacking information that is only available on your server.</string>
    <string name="settings_restore_local_backup">Apply snapshot</string>
    <string name="settings_restore_local_backup_summary">Replaces the database of Deck Android with the latest snapshot and restarts the app.</string>
    <string name="settings_export_database">Export snapshot</string>
    <string name="settings_export_database_summary">Copies the last snapshot containing the Deck Android SQLite database file to a location of your choice. This does not contain all information. This is not a proper backup solution.</string>
</resources>