<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share_link"
        android:title="@string/share_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_card_assign"
        android:title="@string/action_card_assign"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_card_unassign"
        android:title="@string/action_card_unassign"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_card_move"
        android:title="@string/action_card_move"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_card_archive"
        android:title="@string/action_card_archive"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_card_delete"
        android:title="@string/action_card_delete"
        app:showAsAction="never" />
</menu>
