<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_single_card_background"
    android:orientation="vertical">

    <!-- Widget header -->
    <RelativeLayout
        android:id="@+id/widget_upcoming_header_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/widget_stack_header_height"
        android:padding="@dimen/widget_stack_card_padding">

        <TextView
            android:id="@+id/widget_upcoming_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/widget_stack_card_padding"
            android:paddingEnd="@dimen/widget_stack_card_padding"
            android:textColor="@color/widget_foreground"
            tools:text="@string/widget_upcoming_title"/>

    </RelativeLayout>
    <!-- End header -->

    <ListView
        android:id="@+id/upcoming_widget_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/spacer_1x"
        android:padding="@dimen/spacer_1x"
        tools:listitem="@layout/widget_stack_entry" />

    <ImageView
        android:id="@+id/widget_upcoming_placeholder_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/app_name_short"
        android:textColor="@color/fg_secondary"
        app:srcCompat="@drawable/ic_local_movies_grey600_24dp"
        tools:visibility="gone"
        android:contentDescription="@string/widget_placeholder_icon" />

</LinearLayout>
