<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_push_notification">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/progressWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacer_2x">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacer_2x"
            android:text="@string/updating_card"
            android:textAppearance="?attr/textAppearanceBody1" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminateTint="@color/defaultBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/browserFallback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:padding="@dimen/spacer_2x">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:maxLength="200"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacer_2x"
                android:visibility="gone"
                tools:maxLength="200"
                tools:text="@tools:sample/lorem/random"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacer_2x"
                android:text="@string/open_in_browser" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/errorWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:padding="@dimen/spacer_2x">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/errorExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                tools:text="@string/push_notification_link_empty"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/showError"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacer_2x"
                android:text="@string/show_error" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>