<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/standard_padding">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:contentDescription="@null"
        app:srcCompat="@drawable/ic_person_grey600_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/standard_half_margin"
            tools:text="Username"
            tools:drawableEnd="@drawable/ic_sync_blue_24dp"/>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:flexWrap="wrap"
            app:justifyContent="space_between">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/permission_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/edit"
                app:switchPadding="@dimen/standard_half_margin" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/permission_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simple_share"
                app:switchPadding="@dimen/standard_half_margin" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/permission_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/simple_manage"
                app:switchPadding="@dimen/standard_half_margin" />

        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>

</LinearLayout>